--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,11 +1,13 @@
-# Simple WES test : FastQC + BWA-MEM + sorted BAM.
+# Simple WES test: FastQC + BWA-MEM + sorted BAM.
 
 import pandas as pd
 
+# Load config
 configfile: "config/config.yaml"
 
 samples_df = pd.read_csv("config/samples.csv")
-SAMPLES = samples_df["sample"].tolist()
+samples_df = samples_df.set_index("sample")   # Avoid repeating set_index
+SAMPLES = samples_df.index.tolist()
 
 REF = config["reference"]
 OUTDIR = config["outdir"]
@@ -14,14 +16,13 @@ QC_DIR = config["qc_dir"]
 
 def fq(sample, read):
     """Return FASTQ path for a given sample and read (1 or 2)."""
-    row = samples_df.set_index("sample").loc[sample]
-    return row[f"fastq{read}"]
+    return samples_df.loc[sample, f"fastq{read}"]
 
 
 rule all:
     input:
         expand(f"{OUTDIR}/bam/{{sample}}.sorted.bam", sample=SAMPLES)
 
-
+# Include workflow modules
 include: "rules/qc.smk"
 include: "rules/mapping.smk"
